methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:12: error: not found: value Dejafait
    while (Dejafait!=P){
           ^